--- a/home-manager/dotfiles/hypr/hyprland.conf
+++ b/home-manager/dotfiles/hypr/hyprland.conf
@@ -20,6 +20,7 @@ exec-once = kanshi
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = nm-applet --indicator
+exec-once = easyeffects
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3-dark"
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
@@ -42,7 +43,7 @@ general {
     gaps_in = 4
     gaps_out = 2
     border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(808080ff)
     col.inactive_border = rgba(595959aa)
     resize_on_border = false
     allow_tearing = false
@@ -152,10 +153,15 @@ bind = $mainMod SHIFT, Return, exec, $terminal
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, C, killactive,
 bind = $mainMod, U, exec, $fileManager
-# bind = $mainMod, V, togglefloating,
+bind = $mainMod, B, exec, pkill -SIGUSR1 waybar
 bind = $mainMod, p, exec, $menu
 bind = $mainMod, o, exec, $window
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu --pre-display-cmd "echo '%s' | cut -f 2" | cliphist decode | wl-copy
+bind = $mainMod, M, exec, wlogout
+
+# Screenshots
+bind = , Print, exec, grim - | wl-copy
+bind = SHIFT, Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, Return, layoutmsg, swapwithmaster
