--- a/home-manager/dotfiles/waybar/config.jsonc
+++ b/home-manager/dotfiles/waybar/config.jsonc
@@ -14,6 +14,7 @@
     "backlight",
     "battery",
     "hyprland/language",
+    "custom/waybar-toggle"
   ],
   "hyprland/workspaces": {
     "on-click": "activate",
@@ -86,5 +87,10 @@
   "tray": {
     "icon-size": 21,
     "spacing": 10,
+  },
+  "custom/waybar-toggle": {
+    "format": "",
+    "tooltip": false,
+    "on-click": "pkill -SIGUSR1 waybar"
   }
 }
