--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,10 +1,3 @@
-###############################################################################
-# Bazel now uses Bzlmod by default to manage external dependencies.
-# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
-#
-# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
-###############################################################################
-
 module(
     name = "src",
     version = "1.0.0",
@@ -22,7 +15,7 @@ git_override(
 )
 
 # Python
-bazel_dep(name = "rules_python", version = "1.6.3")
+bazel_dep(name = "rules_python", version = "1.7.0")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.defaults(python_version = "3.12")
@@ -31,35 +24,31 @@ python.toolchain(
     python_version = "3.12",
 )
 
+bazel_dep(name = "platforms", version = "1.0.0")
+
 # C++
-bazel_dep(name = "googletest", version = "1.17.0")
-bazel_dep(name = "rules_cc", version = "0.2.9")
-bazel_dep(name = "boost.algorithm", version = "1.89.0")
+bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
+bazel_dep(name = "rules_cc", version = "0.2.14")
+bazel_dep(name = "boost.algorithm", version = "1.89.0.bcr.2")
 
 # JavaScript/Node.js
 bazel_dep(name = "aspect_rules_js", version = "2.1.0")
 bazel_dep(name = "rules_nodejs", version = "6.3.0")
 
 # Java
-bazel_dep(name = "rules_jvm_external", version = "6.7")
-
-maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
-maven.install(
-    artifacts = [
-        "org.junit:junit-bom:5.11.4",
-    ],
-)
-use_repo(maven, "maven")
+bazel_dep(name = "rules_java", version = "9.3.0")
 
 # Go
-bazel_dep(name = "rules_go", version = "0.57.0")
-bazel_dep(name = "gazelle", version = "0.45.0")
+bazel_dep(name = "rules_go", version = "0.59.0")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.host()
+go_sdk.from_file(go_mod = "//:go.mod")
 use_repo(go_sdk, "go_toolchains")
 
 register_toolchains("@go_toolchains//:all")
+
+# Gazelle
+bazel_dep(name = "gazelle", version = "0.47.0")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
