--- a/home-manager/dotfiles/hypr/hyprland.conf
+++ b/home-manager/dotfiles/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 monitor=eDP-1,preferred,auto,1.6
 
 # Programs
-$terminal = ghostty
+$terminal = kitty
 $fileManager = nautilus
 $menu = wofi --show drun --allow-images
 $window = /home/myuser/.local/bin/window.sh
@@ -20,7 +20,7 @@ exec-once = kanshi
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = nm-applet --indicator
-exec-once = easyeffects
+exec-once = rclone mount dropbox:/music/ ~/music/ --vfs-cache-mode writes
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3-dark"
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
