--- a/pipellm/client/BUILD.bazel
+++ b/pipellm/client/BUILD.bazel
@@ -1,21 +1,10 @@
-load("@rules_go//go:def.bzl", "go_library", "go_test")
+load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "client",
     srcs = ["client.go"],
     importpath = "src/pipellm/client",
     visibility = ["//visibility:public"],
-    deps = [
-        "//pipellm/config",
-        "@com_github_google_generative_ai_go//genai",
-        "@org_golang_google_api//option",
-    ],
-)
-
-go_test(
-    name = "client_test",
-    srcs = ["client_test.go"],
-    embed = [":client"],
     deps = [
         "//pipellm/config",
         "@com_github_google_generative_ai_go//genai",
