--- a/home-manager/dotfiles/hypr/hyprland.conf
+++ b/home-manager/dotfiles/hypr/hyprland.conf
@@ -222,3 +222,6 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Set workspace 1 to be floating
+windowrulev2 = float, workspace:1
