--- a/pet_project/config.json
+++ b/pet_project/config.json
@@ -1,24 +1,25 @@
 {
   "population_size": 100,
   "mutation_rate": 0.02,
-  "imagenet_class": 301,
-  "random_ratio": 0.1,
+  "imagenet_class": 954,
+  "random_ratio": 0.01,
   "parent1_top_ratio": 0.2,
   "parent2_top_ratio": 0.2,
   "image_width": 224,
   "image_height": 224,
   "model_paths": [
-    "/home/myuser/src/pet_project/mobilenetv2-12.onnx"
+    "/home/myuser/src/pet_project/mobilenetv2-12.onnx",
+    "/home/myuser/src/pet_project/resnet50-v2-7.onnx"
   ],
-  "output_dir": "/home/myuser/tmp/output",
-  "print_interval": 5,
-  "save_interval": 5,
+  "output_dir": "/home/zjgkkn/tmp/output",
+  "print_interval": 10,
+  "save_interval": 10,
   "use_gpu": true,
-  "use_blur": true,
+  "use_blur": false,
   "initial_grid_size": 4,
   "max_grid_size": 256,
-  "stabilization_generations": 100,
+  "stabilization_generations": 50,
   "fitness_improvement_threshold": 0.01,
-  "divide_elite": false,
+  "divide_elite": true,
   "divide_interpolate": true
 }
