--- a/pet_project/config.json
+++ b/pet_project/config.json
@@ -1,24 +1,21 @@
 {
-  "population_size": 100,
+  "population_size": 150,
   "mutation_rate": 0.02,
-  "imagenet_class": 954,
+  "imagenet_class": 65,
   "random_ratio": 0.01,
   "parent1_top_ratio": 0.2,
-  "parent2_top_ratio": 0.2,
+  "parent2_top_ratio": 0.8,
   "image_width": 224,
   "image_height": 224,
-  "model_paths": [
-    "/home/myuser/src/pet_project/mobilenetv2-12.onnx",
-    "/home/myuser/src/pet_project/resnet50-v2-7.onnx"
-  ],
+  "model_paths": ["/home/myuser/src/pet_project/resnet50-v2-7.onnx"],
   "output_dir": "/home/myuser/tmp/output",
   "print_interval": 10,
   "save_interval": 10,
   "use_gpu": true,
-  "use_blur": false,
+  "blur_strength": 0.2,
   "initial_grid_size": 4,
-  "max_grid_size": 256,
-  "stabilization_generations": 50,
+  "max_grid_size": 128,
+  "stabilization_generations": 100,
   "fitness_improvement_threshold": 0.01,
   "divide_elite": true,
   "divide_interpolate": true
