--- a/production/kubernetes/helm-charts/gerrit/templates/plugin-server.yaml
+++ b/production/kubernetes/helm-charts/gerrit/templates/plugin-server.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: nginx
         image: {{ .Values.pluginServer.image.repository }}:{{ .Values.pluginServer.image.tag }}
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
 ---
