--- a/production/kubernetes/helm-charts/opengrok/templates/ssh-secret.yaml
+++ b/production/kubernetes/helm-charts/opengrok/templates/ssh-secret.yaml
@@ -11,6 +11,6 @@ stringData:
   id_ed25519.pub: |
 {{ index .Values.ssh.keys "id_ed25519.pub" | indent 4 }}
   config: |
-    Host cl.your.domain 192.168.1.220
+    Host review.your.domain 192.168.1.220
       StrictHostKeyChecking no
       UserKnownHostsFile /dev/null
