--- a/home-manager/dotfiles/hypr/hyprland.conf
+++ b/home-manager/dotfiles/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # Monitors
 # monitor=,preferred,auto,auto
-monitor=eDP-1,preferred,auto,1.6
+monitor=,preferred,auto,1
 
 # Programs
 $terminal = kitty
