--- a/pet_project/config.json
+++ b/pet_project/config.json
@@ -1,10 +1,10 @@
 {
   "population_size": 150,
   "mutation_rate": 0.02,
-  "imagenet_class": 65,
+  "imagenet_class": 14,
   "random_ratio": 0.01,
   "parent1_top_ratio": 0.2,
-  "parent2_top_ratio": 0.8,
+  "parent2_top_ratio": 0.6,
   "image_width": 224,
   "image_height": 224,
   "model_paths": ["/home/myuser/src/pet_project/resnet50-v2-7.onnx"],
@@ -17,6 +17,6 @@
   "max_grid_size": 128,
   "stabilization_generations": 100,
   "fitness_improvement_threshold": 0.01,
-  "divide_elite": true,
+  "divide_elite": false,
   "divide_interpolate": true
 }
