--- a/cpp/warmup/BUILD
+++ b/cpp/warmup/BUILD
@@ -1,6 +1,6 @@
-load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
+load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
 
-# Automatically create a cc_library for every .cc file that is not a test.
+# Automatically create a cc_library for every .cc file that is not a test or benchmark.
 [
     cc_library(
         name = src.replace(".cc", "_lib"),
@@ -11,7 +11,10 @@ load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
     )
     for src in glob(
         ["*.cc"],
-        exclude = ["*_gtest.cc"],
+        exclude = [
+            "*_gtest.cc",
+            "*_bench.cc",
+        ],
     )
 ]
 
@@ -27,4 +30,18 @@ load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
         ],
     )
     for src in glob(["*_gtest.cc"])
+]
+
+# Automatically create a cc_binary for every _bench.cc file.
+[
+    cc_binary(
+        name = src.replace(".cc", ""),
+        srcs = [src],
+        copts = ["-std=c++17"],
+        deps = [
+            "@google_benchmark//:benchmark_main",
+            ":" + src.replace("_bench.cc", "") + "_lib",
+        ],
+    )
+    for src in glob(["*_bench.cc"])
 ]
