--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -28,6 +28,7 @@ bazel_dep(name = "platforms", version = "1.0.0")
 
 # C++
 bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
+bazel_dep(name = "google_benchmark", version = "1.9.5")
 bazel_dep(name = "rules_cc", version = "0.2.17")
 bazel_dep(name = "boost.algorithm", version = "1.90.0.bcr.1")
 bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
